# windy-drops

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
.github/lint/: lint-canonical-domains.sh
.github/workflows/: ci.yml
docs/: AUDIT_2026-05-21.md  DNA_STRAND_MASTER_PLAN.md  MILESTONES.md  README.md
examples/: README.md
examples/control-panel-template-minimal/: SKILL.md  render.js  styles.css
examples/skill-minimal/: SKILL.md
examples/theme-minimal/: SKILL.md  theme.css
examples/tool-minimal/: SKILL.md
examples/voice-pack-minimal/: SKILL.md
examples/workflow-minimal/: SKILL.md
python/artifact-spec/: README.md  codegen.py  pyproject.toml
python/artifact-spec/tests/: test_parse.py  test_round_trip.py
python/sdk/: README.md  pyproject.toml
python/sdk/src/windy_drops/: __init__.py  cli.py
python/sdk/src/windy_drops/commands/: bundle.py  fork.py  new.py  publish.py  sign.py  validate.py  withdraw.py
python/sdk/src/windy_drops/lib/: canonical.py  eternitas.py  registry.py  scaffold.py  skill_md.py  zip_writer.py
python/sdk/tests/: test_bundle.py  test_fork.py  test_new.py  test_publish.py  test_sign.py  test_validate.py  test_withdraw.py
schemas/: README.md  windy.drop.v1.json
tools/: README.md
tools/conformance/: README.md  run-bundle-identity.sh  run.sh
tools/conformance/fixtures/: echo-hq-neon.json  echo-hq.json  i18n-multilang.json  invalid-agent-no-operator.json  invalid-bad-id.json  invalid-bad-semver.json  invalid-no-author.json  invalid-unknown-type.json  (+2 more)
(+3 files in other folders)
